--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
   <div class="wrapper">
-    <div class="copyright"><p ><a href="http://fly9sky.github.io" target="_blank">飛上九天攬日</a> &#169; 2023</p></div>
+    <div class="copyright"><p ><a href="http://blog.devgis.com" target="_blank">飛上九天攬日</a> &#169; 2023</p></div>
   </div>
 </footer>
