--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -32,7 +32,7 @@ $lime_green: #B7D12A;
 $purple: #B509AC;
 
 
-$grey-color-dark: #333;   /* footer */
+$grey-color-dark: #eee;   /* footer */
 $grey-color-light: #ddd;  /* navigation bar border */
 $text-color:     #666;
 
