--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -56,21 +56,7 @@ font-size:22px;
 position: absolute;
 padding-left: 0px;
 padding-top: 5px;
-        }
-.copyright {
-    font-size:17px;
-    position:absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    width: 100px;
-    height: 100px;
-    border: 1px solid gold;
-    text-align:center;
-    line-height:100px;
-        }
+}
     
 @include media-query($on-palm) {
 position: fixed;
@@ -92,21 +78,8 @@ font-size:22px;
 position: absolute;
 padding-left: 0px;
 padding-top: 5px;
-        }
-.copyright {
-    font-size:17px;
-    position:absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    width: 100px;
-    height: 100px;
-    border: 1px solid gold;
-    text-align:center;
-    line-height:100px;
-        }
+}
+
 .page-link {
 display: line;
         }
@@ -136,11 +109,12 @@ display: line;
 
 /**
  * Site footer  **********************************************************
+ border-top: 1px solid $grey-color-dark;
  */
 .site-footer {
-border-top: 1px solid $grey-color-dark;
-font-size: 10px;
+font-size: 20px;
 background-color: $grey-color-dark;
+text-align: center;
 padding: 2px;
 color: #aaa;
 position:fixed;
@@ -152,6 +126,18 @@ width:100%;
 .site-footer p {
     margin-bottom: 0; // Remove margin set in _sass/_base.scss for vertical rythm
 }
+
+.copyright {
+    font-size: 20px;
+    text-align: center;
+    background-color: $grey-color-dark;
+    padding: 2px;
+    color: #aaa;
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    width:100%;
+    }
 
 /**
  * Pagination   **********************************************************
