--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,8 @@
       <div class="trigger">
        
         <!-- {{ site.title }} instead of blog -->
-        <a class="page-link" href="{{ site.baseurl }}/">首页</a>
+        <!--  <a class="page-link" href="{{ site.baseurl }}/">首页</a> -->
+        <a class="page-link" href="/anthologies/">首页</a>
 
         {% for page in site.pages %}
           {% if page.title %}
@@ -21,3 +22,4 @@
   </div>
 
 </header>
+
