--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,18 +7,13 @@
       <div class="trigger">
        
         <!-- {{ site.title }} instead of blog -->
-        <!--  <a class="page-link" href="{{ site.baseurl }}/">首页</a> -->
-        <a class="page-link" href="/anthologies/">首页</a>
-        <a class="page-link" href="/notes/">读书</a>
-        <a class="page-link" href="/about/">关于</a>
+        <a class="page-link" href="{{ site.baseurl }}/">首页</a> 
 
-        <!--
         {% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
-          -->
       </div>
     </nav>
 
