--- a/css/fly9sky.css
+++ b/css/fly9sky.css
@@ -77,3 +77,7 @@ ul, ol {
     width: 480px; /* 设置图像宽度为200像素 */
     height: auto; /* 高度自适应比例保持原始尺寸 */
 }
+
+.page-content {
+    padding: 0px 0;
+}
